--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@cloudflare/vitest-pool-workers": "^0.6.12",
 		"@cloudflare/workers-types": "^4.20250204.0",
 		"@tailwindcss/cli": "^4.0.7",
+		"daisyui": "^5.0.0-beta.8",
 		"tailwindcss": "^4.0.7",
 		"typescript": "^5.7.3",
 		"vitest": "2.1.9",
