--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
 	"description": "A Cloudflare Workers implementation of OpenAI's Deep Research agent",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
-	"files": [
-		"dist",
-		"LICENSE",
-		"README.md"
-	],
+	"files": ["dist", "LICENSE", "README.md"],
 	"scripts": {
 		"build": "tsup src/index.ts --format cjs,esm --external cloudflare:workers",
 		"build-css": "npx @tailwindcss/cli -i ./src/layout/index.css -o ./assets/styles.css",
@@ -29,24 +25,24 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@cloudflare/vitest-pool-workers": "^0.6.12",
-		"@cloudflare/workers-types": "^4.20250204.0",
-		"@tailwindcss/cli": "^4.0.7",
-		"@types/node": "^22.13.9",
-		"daisyui": "^5.0.0-beta.8",
-		"tailwindcss": "^4.0.7",
-		"typescript": "^5.7.3",
-		"vitest": "2.1.9",
-		"wrangler": "^3.107.3"
+		"@cloudflare/vitest-pool-workers": "^0.8.34",
+		"@cloudflare/workers-types": "^4.20250531.0",
+		"@tailwindcss/cli": "^4.1.8",
+		"@types/node": "^22.15.29",
+		"daisyui": "^5.0.43",
+		"tailwindcss": "^4.1.8",
+		"typescript": "^5.8.3",
+		"vitest": "3.1.4",
+		"wrangler": "^4.18.0"
 	},
 	"dependencies": {
-		"@ai-sdk/google": "^1.1.13",
-		"@cloudflare/puppeteer": "^0.0.14",
-		"ai": "^4.1.28",
-		"hono": "^4.7.0",
-		"marked": "^15.0.7",
+		"@ai-sdk/google": "^1.2.18",
+		"@cloudflare/puppeteer": "^1.0.2",
+		"ai": "^4.3.16",
+		"hono": "^4.7.10",
+		"marked": "^15.0.12",
 		"node-html-markdown": "^1.3.0",
 		"workers-qb": "^1.10.2",
-		"zod": "^3.24.1"
+		"zod": "^3.25.42"
 	}
 }
