--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,7 +13,7 @@ command = "npm run build-css"
 watch_dir = "./src"
 
 [assets]
-directory = "./assets"
+directory = "./src/static/"
 
 [[workflows]]
 name = "workers-reseacher-workflow"
