--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
 		"@cloudflare/workers-types": "^4.20250607.0",
 		"@tailwindcss/cli": "^4.1.8",
 		"@types/node": "^22.15.30",
-		"hono": "4.7.11",
 		"tailwindcss": "^4.1.8",
 		"typescript": "^5.8.3",
 		"unenv": "^2.0.0-rc.17",
@@ -44,7 +43,7 @@
 		"@ai-sdk/google": "^1.2.19",
 		"@cloudflare/puppeteer": "^1.0.2",
 		"ai": "^4.3.16",
-		"html-to-pdf": "latest",
+		"hono": "^4.7.11",
 		"marked": "^15.0.12",
 		"node-html-markdown": "^1.3.0",
 		"workers-qb": "^1.10.2",
